update unit test springboot oauth-sso